// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformers transformScript 1`] = `
"
import { ref, defineComponent } from 'vue'
import HelloWorld from './HelloWorld.vue'

const __Component = defineComponent({
  components: {
    HelloWorld
  },
  setup(props) {
    const count = ref(0)
    const inc = () => {
      count.value++
    }
    console.log(count.value.length)

    return {
      count,
      inc
    }
  }
})


///////////////////// START: Type Helpers ///////////////////
import { ClassInstance, _VNodeProps, _resolveComponent, PropTypes, _VNode, _VNodeTypes, _ClassComponent, _Data, RequiredPropNames, WithEmitType, MixIntoComponent, isNeverType } from \\"^__GLOBAL_TYPES\\";

type EVENT_DICT = {

}

type __ExternalComponents = {
  HelloWorld: ClassInstance<typeof HelloWorld>;
}

type __ExternalComponentsProps = {
  HelloWorld: RequiredPropNames<__ExternalComponents['HelloWorld']>;
}

const ___Component: MixIntoComponent<typeof __Component, WithEmitType<typeof __Component, EVENT_DICT>> = __Component as any

export default ___Component;

type __PropArg<N> = N extends keyof __ExternalComponents ?  PropTypes<__ExternalComponents[N]> : _Data
type __EmitArg<N> = N extends keyof __ExternalComponents ? __ExternalComponents[N]['$options']['__emitHandlerTypes'] : {}
type __DOMArg<N> = N extends string ? N extends keyof __ExternalComponents ? {} : JSX.IntrinsicElements[N] : {}

declare function _createVNode<N extends (keyof __ExternalComponents | _VNodeTypes | _ClassComponent)>(type: N, ...args: (N extends keyof __ExternalComponents ? true extends isNeverType<__ExternalComponentsProps[N]> ? [(_VNodeProps & __PropArg<N> & __EmitArg<N>)?, unknown?, number?, (string[] | null)?, boolean?] : [(_VNodeProps & __PropArg<N> & __EmitArg<N>), unknown?, number?, (string[] | null)?, boolean?] : [((_Data & _VNodeProps & __DOMArg<N>) | null)?, unknown?, number?, (string[] | null)?, boolean?])): _VNode;
///////////////////// END: Type Helpers /////////////////////

import { createVNode as #createVNode, toDisplayString as _toDisplayString, resolveComponent as #resolveComponent, openBlock as _openBlock, createBlock as _createBlock } from \\"vue\\"

function render(_ctx: ClassInstance<typeof __Component>) {
  const _component_HelloWorld = _resolveComponent(\\"HelloWorld\\")

  return (_openBlock(), _createBlock(\\"div\\", null, [
    _createVNode(\\"img\\", { src: \\"./logo.png\\" }),
    _createVNode(\\"h1\\", null, \\"Hello Vue 3!\\"),
    _createVNode(\\"button\\", { onClick: _ctx.inc }, \\"Clicked \\" + _toDisplayString(_ctx.count.length) + \\" times.\\", 9 /* TEXT, PROPS */, [\\"onClick\\"]),
    _createVNode(_component_HelloWorld)
  ]))
}"
`;

exports[`transformers transformScript 2`] = `
"
import { defineComponent } from 'vue'

const __Component = defineComponent({
  props: {
    msg: {
      type: String,
      required: true
    }
  }
})


///////////////////// START: Type Helpers ///////////////////
import { ClassInstance, _VNodeProps, _resolveComponent, PropTypes, _VNode, _VNodeTypes, _ClassComponent, _Data, RequiredPropNames, WithEmitType, MixIntoComponent, isNeverType } from \\"^__GLOBAL_TYPES\\";

type EVENT_DICT = {

}

type __ExternalComponents = {

}

type __ExternalComponentsProps = {

}

const ___Component: MixIntoComponent<typeof __Component, WithEmitType<typeof __Component, EVENT_DICT>> = __Component as any

export default ___Component;

type __PropArg<N> = N extends keyof __ExternalComponents ?  PropTypes<__ExternalComponents[N]> : _Data
type __EmitArg<N> = N extends keyof __ExternalComponents ? __ExternalComponents[N]['$options']['__emitHandlerTypes'] : {}
type __DOMArg<N> = N extends string ? N extends keyof __ExternalComponents ? {} : JSX.IntrinsicElements[N] : {}

declare function _createVNode<N extends (keyof __ExternalComponents | _VNodeTypes | _ClassComponent)>(type: N, ...args: (N extends keyof __ExternalComponents ? true extends isNeverType<__ExternalComponentsProps[N]> ? [(_VNodeProps & __PropArg<N> & __EmitArg<N>)?, unknown?, number?, (string[] | null)?, boolean?] : [(_VNodeProps & __PropArg<N> & __EmitArg<N>), unknown?, number?, (string[] | null)?, boolean?] : [((_Data & _VNodeProps & __DOMArg<N>) | null)?, unknown?, number?, (string[] | null)?, boolean?])): _VNode;
///////////////////// END: Type Helpers /////////////////////

import { toDisplayString as _toDisplayString, createVNode as #createVNode, openBlock as _openBlock, createBlock as _createBlock } from \\"vue\\"

function render(_ctx: ClassInstance<typeof __Component>) {
  return (_openBlock(), _createBlock(\\"div\\", null, [
    _createVNode(\\"h1\\", null, _toDisplayString(_ctx.msg), 1 /* TEXT */)
  ]))
}"
`;

exports[`transformers transformScript 3`] = `
"
import { defineComponent } from 'vue'

const __Component = defineComponent({
})


///////////////////// START: Type Helpers ///////////////////
import { ClassInstance, _VNodeProps, _resolveComponent, PropTypes, _VNode, _VNodeTypes, _ClassComponent, _Data, RequiredPropNames, WithEmitType, MixIntoComponent, isNeverType } from \\"^__GLOBAL_TYPES\\";

type EVENT_DICT = {

}

type __ExternalComponents = {

}

type __ExternalComponentsProps = {

}

const ___Component: MixIntoComponent<typeof __Component, WithEmitType<typeof __Component, EVENT_DICT>> = __Component as any

export default ___Component;

type __PropArg<N> = N extends keyof __ExternalComponents ?  PropTypes<__ExternalComponents[N]> : _Data
type __EmitArg<N> = N extends keyof __ExternalComponents ? __ExternalComponents[N]['$options']['__emitHandlerTypes'] : {}
type __DOMArg<N> = N extends string ? N extends keyof __ExternalComponents ? {} : JSX.IntrinsicElements[N] : {}

declare function _createVNode<N extends (keyof __ExternalComponents | _VNodeTypes | _ClassComponent)>(type: N, ...args: (N extends keyof __ExternalComponents ? true extends isNeverType<__ExternalComponentsProps[N]> ? [(_VNodeProps & __PropArg<N> & __EmitArg<N>)?, unknown?, number?, (string[] | null)?, boolean?] : [(_VNodeProps & __PropArg<N> & __EmitArg<N>), unknown?, number?, (string[] | null)?, boolean?] : [((_Data & _VNodeProps & __DOMArg<N>) | null)?, unknown?, number?, (string[] | null)?, boolean?])): _VNode;
///////////////////// END: Type Helpers /////////////////////

import { createVNode as #createVNode, openBlock as _openBlock, createBlock as _createBlock } from \\"vue\\"

function render(_ctx: ClassInstance<typeof __Component>) {
  return (_openBlock(), _createBlock(\\"div\\", null, [
    _createVNode(\\"h1\\", null, \\"Hello world!\\")
  ]))
}"
`;

exports[`transformers transformScript 4`] = `
Map {
  "test.vue.template.ts" => Object {
    "map": Object {
      "file": "test.vue",
      "mappings": ";AAEA;AACA;AACA",
      "names": Array [],
      "sourceRoot": "",
      "sources": Array [
        "test.vue",
      ],
      "sourcesContent": Array [
        "
<template>
  <div>
    <h1>Hello world!</h1>
  </div>
</template>
    
<script lang=\\"ts\\">
import { defineComponent } from 'vue'

export default defineComponent({
})
</script>
    ",
      ],
      "version": 3,
    },
  },
  "test.vue.template.compiled.ts" => Object {
    "map": Object {
      "mappings": ";;;wBACE,aAEM;IADJ,aAAqB,YAAjB,cAAY",
      "names": Array [],
      "sources": Array [
        "test.vue.template.ts",
      ],
      "sourcesContent": Array [
        "
  <div>
    <h1>Hello world!</h1>
  </div>
",
      ],
      "version": 3,
    },
  },
  "test.vue.script.ts" => Object {
    "map": Object {
      "file": "test.vue.script.ts",
      "mappings": ";AAQA;;AAEA;AACA",
      "names": Array [],
      "sourceRoot": "",
      "sources": Array [
        "test.vue",
      ],
      "sourcesContent": Array [
        "
<template>
  <div>
    <h1>Hello world!</h1>
  </div>
</template>
    
<script lang=\\"ts\\">
import { defineComponent } from 'vue'

export default defineComponent({
})
</script>
    ",
      ],
      "version": 3,
    },
  },
  "test.vue.ts" => Object {
    "map": Object {
      "file": "test.vue.ts",
      "sections": Array [
        Object {
          "map": Object {
            "file": "test.vue.script.transformed.ts",
            "mappings": "AAAA;AACA;AACA;AACA;AACA;AACA",
            "names": Array [],
            "sources": Array [
              "test.vue.script.ts",
            ],
            "sourcesContent": Array [
              "
import { defineComponent } from 'vue'

export default defineComponent({
})
",
            ],
            "version": 3,
          },
          "offset": Object {
            "column": 0,
            "line": 0,
          },
        },
        Object {
          "map": Object {
            "file": "test.vue.template.compiled.transformed.ts",
            "mappings": "AAAA;AACA;AACA;AACA;AACA;AACA;AACA",
            "names": Array [],
            "sources": Array [
              "test.vue.template.compiled.ts",
            ],
            "sourcesContent": Array [
              "import { createVNode as _createVNode, openBlock as _openBlock, createBlock as _createBlock } from \\"vue\\"

export function render(_ctx, _cache) {
  return (_openBlock(), _createBlock(\\"div\\", null, [
    _createVNode(\\"h1\\", null, \\"Hello world!\\")
  ]))
}",
            ],
            "version": 3,
          },
          "offset": Object {
            "column": 0,
            "line": 33,
          },
        },
      ],
      "version": "3",
    },
  },
}
`;
